src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>ASA_Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ASA Salesforce USER</description>
        <label>ASA Associate</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This user is not active.  Please select another associate.</errorMessage>
            <filterItems>
                <field>$User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>R00N30000001GMYpEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASA_Attending__c</fullName>
        <inlineHelpText>Enter the name(s) of other ASA staff attending which are not listed as a Salesforce user.</inlineHelpText>
        <label>ASA - Attending</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASA_Customer__c</fullName>
        <description>What division or Team at ASA is marketing running this &quot;Campaign&quot;</description>
        <label>ASA Customer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Lender Services</fullName>
                </value>
                <value>
                    <fullName>School Management</fullName>
                </value>
                <value>
                    <fullName>L&amp;S</fullName>
                </value>
                <value>
                    <fullName>Professional Svcs</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Borrower Services</fullName>
                </value>
                <value>
                    <fullName>ASA Corportate</fullName>
                </value>
                <value>
                    <fullName>Board of Directors</fullName>
                </value>
                <value>
                    <fullName>Strategic Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Attended__c</fullName>
        <description>Number of people who actual showed</description>
        <label>Actual Attended</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ad_Cost__c</fullName>
        <label>Ad Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ad_Recieved__c</fullName>
        <description>Date when ad was recieved and logged as reveived.</description>
        <label>Ad Recieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ad_Size__c</fullName>
        <description>What size advertizement will they do in the Symposium program.</description>
        <label>Ad Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Black/White</fullName>
                </value>
                <value>
                    <fullName>1/2  Black/White</fullName>
                </value>
                <value>
                    <fullName>1/4  Back/White</fullName>
                </value>
                <value>
                    <fullName>Full Color</fullName>
                </value>
                <value>
                    <fullName>1/2 Color</fullName>
                </value>
                <value>
                    <fullName>1/4 Color</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ad_Specifications__c</fullName>
        <label>Ad Specifications</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Registration_Cost__c</fullName>
        <label>Additional Registration Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Attend_Next_Year__c</fullName>
        <label>Attend Next Year?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attend</fullName>
                </value>
                <value>
                    <fullName>Vend</fullName>
                </value>
                <value>
                    <fullName>Present</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDAttending__c</fullName>
        <description>Other Bussinss Development Reps attending the conference</description>
        <label>BD Attending</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alan Ishida</fullName>
                </value>
                <value>
                    <fullName>William Fortier</fullName>
                </value>
                <value>
                    <fullName>Bob Cole</fullName>
                </value>
                <value>
                    <fullName>Brittany Baker</fullName>
                </value>
                <value>
                    <fullName>Caroline Menendez</fullName>
                </value>
                <value>
                    <fullName>Casey Wallen</fullName>
                </value>
                <value>
                    <fullName>Chris Elam</fullName>
                </value>
                <value>
                    <fullName>Christian James</fullName>
                </value>
                <value>
                    <fullName>Christopher Head</fullName>
                </value>
                <value>
                    <fullName>David Snow</fullName>
                </value>
                <value>
                    <fullName>Den Chou</fullName>
                </value>
                <value>
                    <fullName>Farida Bahadoor</fullName>
                </value>
                <value>
                    <fullName>Jay Sweeney</fullName>
                </value>
                <value>
                    <fullName>Jill Marr</fullName>
                </value>
                <value>
                    <fullName>John Kelly</fullName>
                </value>
                <value>
                    <fullName>Julie Esau</fullName>
                </value>
                <value>
                    <fullName>Kimberly Gavrilles</fullName>
                </value>
                <value>
                    <fullName>Krystal Windley</fullName>
                </value>
                <value>
                    <fullName>Mae St. Julien</fullName>
                </value>
                <value>
                    <fullName>Michael Friedman</fullName>
                </value>
                <value>
                    <fullName>Reis Hagerman</fullName>
                </value>
                <value>
                    <fullName>Robert Tosh</fullName>
                </value>
                <value>
                    <fullName>Sarah Arslanian</fullName>
                </value>
                <value>
                    <fullName>Tanya Tanaro</fullName>
                </value>
                <value>
                    <fullName>Tracy Drechsler</fullName>
                </value>
                <value>
                    <fullName>Vince Scalise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Banner_Received_Date__c</fullName>
        <label>Banner Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Banner_Sent_Date__c</fullName>
        <label>Banner Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booth_Number__c</fullName>
        <description>The booth identification number for the space to set up exhibit at conference</description>
        <label>Booth Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booth_Type__c</fullName>
        <description>What type of booth will be at the conference</description>
        <label>Booth Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10 X 10</fullName>
                </value>
                <value>
                    <fullName>Customized</fullName>
                </value>
                <value>
                    <fullName>N/A Attending Only</fullName>
                </value>
                <value>
                    <fullName>Posters</fullName>
                </value>
                <value>
                    <fullName>Retractable</fullName>
                </value>
                <value>
                    <fullName>Tableclothe</fullName>
                </value>
                <value>
                    <fullName>Table Top</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Card_Holder_Received_Date__c</fullName>
        <label>Business Card Holder Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Card_Holder_Sent_Date__c</fullName>
        <label>Business Card Holder Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <label>Campus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Date__c</fullName>
        <label>Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Holder_Received_Date__c</fullName>
        <label>Collateral Holder Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collateral_Holder_Sent_Date__c</fullName>
        <label>Collateral Holder Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comp_Registrations__c</fullName>
        <description>With the sponsorship level how many Comped (Free) Registations do we get?</description>
        <label># Compt. Registrations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conference_Chair_s__c</fullName>
        <description>The person to contact regarding Sessions/Booth/Information regarding the Conference, could be mutliple people</description>
        <label>Conference Committee Contact (s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Conference_Website__c</fullName>
        <description>The link to confernence information and/or association url</description>
        <label>Conference Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contract_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Appropriate Contract (s) has been executed Venue, Catering</description>
        <label>Contract(s) Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Completion_Date__c</fullName>
        <description>Date contract was complete</description>
        <label>Contract Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exhibit_Details__c</fullName>
        <label>Exhibit Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goal_Academic_Perf_Standard_Tests_UB__c</fullName>
        <label>Goal % Academic Perf Standard Tests (UB)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Goal_Academic_Performance_GPA_UB__c</fullName>
        <label>Goal % Academic Performance GPA (UB)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Goal_Financial_Aid_App_Completion__c</fullName>
        <label>Goal % Financial Aid App Completion</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Goal_N_Funded_to_Serve__c</fullName>
        <label>Goal # Funded to Serve</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Post_Secondary_Admission_EOC__c</fullName>
        <label>Goal % Post Secondary Admission (EOC)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Goal_Post_Secondary_Attainment_6yrs__c</fullName>
        <label>Goal % Post Secondary Attainment 6yrs</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Goal_Post_Secondary_Completion__c</fullName>
        <label>Goal % Post Secondary Completion</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Goal_Postsecondary_Education_Admission__c</fullName>
        <label>Goal % Postsecondary Education Admission</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Goal_Postsecondary_School_Enrollment__c</fullName>
        <label>Goal % Postsecondary School Enrollment </label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Goal_Secondary_Retention_and_Grad__c</fullName>
        <label>Goal % Secondary Retention and Grad</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Goal_Secondary_School_Graduation_Rigor__c</fullName>
        <label>Goal % Secondary School Graduation Rigor</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Goal_Secondary_School_Graduation__c</fullName>
        <label>Goal % Secondary School Graduation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Goal_Secondary_School_Persistence_TS__c</fullName>
        <inlineHelpText>Secondary School Persistence because ___% of non senior students must be promoted to the next grade level.</inlineHelpText>
        <label>Goal % Secondary School Persistence (TS)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Goal_of_low_income_first_generation__c</fullName>
        <label>Goal % of low income + first generation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gold_Sponsor__c</fullName>
        <description>Who are the Gold Sponsors for the ASA Smposium, can be more than one</description>
        <label>Gold Sponsor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Program_Name__c</fullName>
        <label>Grant Program Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EOC Boston</fullName>
                </value>
                <value>
                    <fullName>EOC Brockton</fullName>
                </value>
                <value>
                    <fullName>TS Boston</fullName>
                </value>
                <value>
                    <fullName>TS Brockton</fullName>
                </value>
                <value>
                    <fullName>UB Brockton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indirect_Show_Cost__c</fullName>
        <label>Indirect Show Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invitation_Sent_Date__c</fullName>
        <description>The date the invitations went out from ASA</description>
        <label>Invitation Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Sent__c</fullName>
        <label>Invoice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy_id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location_Contact__c</fullName>
        <description>Contact for the logistics at the location</description>
        <label>Location Contact</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>What City State is the conference being help in</description>
        <label>Location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Materials_Sent__c</fullName>
        <inlineHelpText>Enter the date in which the Materials were sent to the conference/event.</inlineHelpText>
        <label>Materials Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mktg_Banner_Ad_Cost__c</fullName>
        <label>Mktg Banner Ad Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name_of_Grantee_Institution__c</fullName>
        <label>Name of Grantee Institution</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Project_Director__c</fullName>
        <label>Name of Project Director</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendess__c</fullName>
        <description>How many people attended the conference</description>
        <label>Number of Attendees</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Guests__c</fullName>
        <description>Number of additional guests</description>
        <label>Number of Guests</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OMB_Approval_Number_Number__c</fullName>
        <label>OMB Approval Number: Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMB_Expiration_Date__c</fullName>
        <label>OMB Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PE_E_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PE&amp;E Offering</label>
        <referenceTo>Pro_Services_Offering__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PR_Award_Number__c</fullName>
        <label>PR/Award Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participation_Level__c</fullName>
        <label>Participation Level</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <description>How much did we pay to vend and/or attend the conference; e.g. Registration Fees?</description>
        <inlineHelpText>How much did we pay to vend and/or attend the conference; e.g. Registration Fees?</inlineHelpText>
        <label>Payment Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Recieved__c</fullName>
        <description>When did we receive payment for the sponsorship Date Field</description>
        <label>Payment Recieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <inlineHelpText>Status of payment; e.g Paid by check #58696 or Corp Amex / credit card</inlineHelpText>
        <label>Payment Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Conf_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do we get a pre-conference regigistration list with our Sponsorship level?</description>
        <label>Pre Conf. Registration List?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presenting__c</fullName>
        <description>Person will be presenting at the conference, training or workshop</description>
        <label>Presenting</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Betsy Mayotte</fullName>
                </value>
                <value>
                    <fullName>Bob Cole</fullName>
                </value>
                <value>
                    <fullName>Caroline Menendez</fullName>
                </value>
                <value>
                    <fullName>Casey Wallen</fullName>
                </value>
                <value>
                    <fullName>Chris Elam</fullName>
                </value>
                <value>
                    <fullName>David Snow</fullName>
                </value>
                <value>
                    <fullName>Fidel Calero</fullName>
                </value>
                <value>
                    <fullName>Gina Lucente-Cole</fullName>
                </value>
                <value>
                    <fullName>Jacqueline Carroll</fullName>
                </value>
                <value>
                    <fullName>Jay Sweeney</fullName>
                </value>
                <value>
                    <fullName>Jill Marr</fullName>
                </value>
                <value>
                    <fullName>Joanne Dashiell</fullName>
                </value>
                <value>
                    <fullName>John Kelly</fullName>
                </value>
                <value>
                    <fullName>Jonathan Sparling</fullName>
                </value>
                <value>
                    <fullName>Julie Esau</fullName>
                </value>
                <value>
                    <fullName>Kevin Fudge</fullName>
                </value>
                <value>
                    <fullName>Lorinda Diehl</fullName>
                </value>
                <value>
                    <fullName>Mae St. Julien</fullName>
                </value>
                <value>
                    <fullName>Michael Friedman</fullName>
                </value>
                <value>
                    <fullName>Paul Combe</fullName>
                </value>
                <value>
                    <fullName>Robert Tosh</fullName>
                </value>
                <value>
                    <fullName>Sarah Arslanian</fullName>
                </value>
                <value>
                    <fullName>Susan Nathan</fullName>
                </value>
                <value>
                    <fullName>Tanya Tanaro</fullName>
                </value>
                <value>
                    <fullName>Tracy Drechsler</fullName>
                </value>
                <value>
                    <fullName>Vince Scalise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_BD__c</fullName>
        <label>BD Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alan Ishida</fullName>
                </value>
                <value>
                    <fullName>William Fortier</fullName>
                </value>
                <value>
                    <fullName>Bob Cole</fullName>
                </value>
                <value>
                    <fullName>Caroline Menendez</fullName>
                </value>
                <value>
                    <fullName>Casey Wallen</fullName>
                </value>
                <value>
                    <fullName>Chris Elam</fullName>
                </value>
                <value>
                    <fullName>David Snow</fullName>
                </value>
                <value>
                    <fullName>Jay Sweeney</fullName>
                </value>
                <value>
                    <fullName>Julie Esau</fullName>
                </value>
                <value>
                    <fullName>Mae St. Julien</fullName>
                </value>
                <value>
                    <fullName>Michael Friedman</fullName>
                </value>
                <value>
                    <fullName>Reis Hagerman</fullName>
                </value>
                <value>
                    <fullName>Sarah Arslanian</fullName>
                </value>
                <value>
                    <fullName>Tanya Tanaro</fullName>
                </value>
                <value>
                    <fullName>Tracy Drechsler</fullName>
                </value>
                <value>
                    <fullName>Vince Scalise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProfesionalDevelopment_Training__c</fullName>
        <description>People attending conference for Training/Professional Development</description>
        <label>Professional Development - Training</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Andrew Marley</fullName>
                </value>
                <value>
                    <fullName>Bill Fortier</fullName>
                </value>
                <value>
                    <fullName>Bob Cole</fullName>
                </value>
                <value>
                    <fullName>Caroline Menendez</fullName>
                </value>
                <value>
                    <fullName>David Snow</fullName>
                </value>
                <value>
                    <fullName>Farida Bahador</fullName>
                </value>
                <value>
                    <fullName>Gina Lucenta-Cole</fullName>
                </value>
                <value>
                    <fullName>Jacquie Carroll</fullName>
                </value>
                <value>
                    <fullName>Jason Sweeney</fullName>
                </value>
                <value>
                    <fullName>Jill Marr</fullName>
                </value>
                <value>
                    <fullName>John Kelly</fullName>
                </value>
                <value>
                    <fullName>Julie Esau</fullName>
                </value>
                <value>
                    <fullName>Robert Tosh</fullName>
                </value>
                <value>
                    <fullName>Sue Nathan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_End_Date__c</fullName>
        <label>Program End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Start_Date__c</fullName>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RSVP_Deadline__c</fullName>
        <description>RSVP deadline date listed on invitation</description>
        <label>RSVP Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_List_Details__c</fullName>
        <label>Registration List Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account this campaign is related to (if applicable)</description>
        <inlineHelpText>The Account this campaign is related to</inlineHelpText>
        <label>Related Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reminder_Email_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder Email Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rep_Cost__c</fullName>
        <label>Rep Cost</label>
        <summarizedField>Campaign_ASA_Attendees__c.Total_Cost_of_Attendance__c</summarizedField>
        <summaryForeignKey>Campaign_ASA_Attendees__c.Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Room_Rate__c</fullName>
        <description>Room rate negotiated for blocked rooms.</description>
        <label>Room Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rooms_Reserved__c</fullName>
        <description>The number of hotel rooms reserved/blocked at for the entire conference.</description>
        <label># Rooms Reserved</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Year__c</fullName>
        <label>Service Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2017-2018</fullName>
                </value>
                <value>
                    <fullName>2018-2019</fullName>
                </value>
                <value>
                    <fullName>2019-2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_s_Presented__c</fullName>
        <description>What is being presented at the conference.</description>
        <label>Session(s) Presented</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <description>Where the Booth and other materials should be shipped.</description>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Speakers__c</fullName>
        <description>Who will be the key speakers at the Symposium</description>
        <label>Speakers</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sponsored_Item__c</fullName>
        <description>What items is being sponsored</description>
        <label>Sponsored Item</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Amt__c</fullName>
        <label>Sponsorship Amt</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Cost__c</fullName>
        <description>How much does the sponsorship level cost</description>
        <label>Sponsorship Cost</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Level__c</fullName>
        <label>Sponsorship Level</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_Sign__c</fullName>
        <description>What will they have at the table to represent the Sponsorship</description>
        <label>Table Sign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sign</fullName>
                </value>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tablecloth_Received_Date__c</fullName>
        <label>Tablecloth Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tablecloth_Sent_Date__c</fullName>
        <label>Tablecloth Sent Date</label>
        <type>Date</type>
    </fields>
</CustomObject>